--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQovwagDaOh4LMJJ14UN20",
+      "authorship_tag": "ABX9TyMd+o10h4h/bJGje029Ugay",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,9 @@
         "#https://www.analyticsvidhya.com/blog/2025/03/langmem-sdk/ - Analytics Vidhya\n",
         "#https://docs.langchain.com/oss/python/langgraph/add-memory#add-short-term-memory\n",
         "#https://medium.com/@devwithll/simple-langgraph-implementation-with-memory-asyncsqlitesaver-checkpointer-fastapi-54f4e4879a2e - CODE FOR RUNNING CONV AI USING GRAPH\n",
+        "#https://ssahuupgrad-93226.medium.com/deep-agents-long-horizon-task-completion-framework-8a702ce9da18 - LONG CONTEXT AGENT\n",
+        "\n",
+        "\n",
         "!pip install langchain_core langchain-anthropic langgraph"
       ]
     },
@@ -1299,7 +1302,7 @@
       "metadata": {
         "id": "0G5YwNTyPPuJ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1415,12 +1418,41 @@
       "metadata": {
         "id": "X-Scwr0kRl-1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class ContextManager:\n",
+        "  def __init__(self,max_context_length: int = 100000):\n",
+        "    self.max_context_length = max_context_length\n",
+        "    self.summarizer = ChatOpenAI(model = \"gpt-3.5-turbo\")\n",
+        "  def compress_context(self,conversation_history):\n",
+        "    if len(conversation_history) <= self.max_context_length:\n",
+        "      return conversation_history\n",
+        "    #else compress\n",
+        "    compression_threshold = len(conversation_history) // 2\n",
+        "    to_compress = conversation_history[:compression_threshold]\n",
+        "    to_keep = conversation_history[compression_threshold:]\n",
+        "    #summarize old context\n",
+        "    summary_prompt = \"\"\"\n",
+        "    Summarize the following coversation history , preserving:\n",
+        "    -Key decisions Made\n",
+        "    -Current task status\n",
+        "    -Critical context for ongoing work\n",
+        "    \"\"\"\n",
+        "\"\"\"\n",
+        "Conversation :\n",
+        " {conversation}\n",
+        " Provide a concise summary that maintains all essential information:\n",
+        " \"\"\"\n",
+        " summary = self.summarizer.invoke(\n",
+        "     summary_prompt.format(conversation = str(to_compress))\n",
+        " )\n",
+        "\n",
+        " return [{\"role\":\"system\", \"content\": f\"Previous context summary:{summary}\"}] + to_keep # solid you give context in System prompt\n"
+      ],
       "metadata": {
         "id": "lwvvZDJwZy50"
       },
