--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOfaL4Yh7zEHuGo8V8ERDY8",
+      "authorship_tag": "ABX9TyM7ssrarHa31B22VLqgG1oi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1700,6 +1700,17 @@
       ],
       "metadata": {
         "id": "c4ke5NdEZIDx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#code for GRPO\n"
+      ],
+      "metadata": {
+        "id": "PbfL59rmnZbc"
       },
       "execution_count": null,
       "outputs": []
