--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM7ssrarHa31B22VLqgG1oi",
+      "authorship_tag": "ABX9TyPsFASmQkfXOzwu/hd2R5so",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1707,12 +1707,169 @@
     {
       "cell_type": "code",
       "source": [
-        "#code for GRPO\n"
+        "#code for GRPO\n",
+        "#key is that reward is calculated for each generated response and rewards are averaged at group level and then advantage is calculated considering this avg reward...\n",
+        "#this is key and it leads to faster training and serving of GRPO models on limited hardware\n",
+        "#train Qwen on GSM8K\n",
+        "%%capture\n",
+        "!pip install unsloth vllm\n",
+        "!pip install --update pillow\n",
+        "\n",
+        "!pip install git+https://github.com/huggingface/trl.git@e95f9fb74a3c3647b86f251b7e230ec51c64b72b #trl for using GRPO\n",
+        "\n"
       ],
       "metadata": {
         "id": "PbfL59rmnZbc"
       },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth import FastLanguageModel , PatchFastRL\n",
+        "#execute the patch\n",
+        "PatchFastRL(\"GRPO\", FastLanguageModel)"
+      ],
+      "metadata": {
+        "id": "yufPXVwbxqzE"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "#load base model and tokenizer\n",
+        "model , tokenizer = FastLanguageModel.from_pretrained(\n",
+        "    model_name = \"Qwen/Qwen2.5-7B-Instruct\",\n",
+        "    max_seq_length = 2048,\n",
+        "    load_in_4bit = True,\n",
+        "    fast_inference = True, #enable vLLm for fast inference\n",
+        "    max_lora_rank= 64, #Larger rank = smarter , but slower\n",
+        "    gpu_memory_utilization = 0.9, # reduce if OOM\n",
+        "    torch_dtype = torch.bfloat16, #computation will happen in dtype .... even though model is loaded in 4 bit....\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "dvBTffvuyVgV"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = FastLanguageModel.get_peft_model(\n",
+        "    model,\n",
+        "    r=64,\n",
+        "    target_modules= [\n",
+        "        \"q_proj\",\n",
+        "        \"k_proj\",\n",
+        "        \"v_proj\",\n",
+        "        \"o_proj\",\n",
+        "        \"gate_proj\",\n",
+        "        \"u_proj\",\n",
+        "        \"down_proj\"\n",
+        "    ],\n",
+        "    lora_alpha = 64,\n",
+        "    use_gradient_checkpointing = \"unsloth\",\n",
+        "    lora_dropout = 0.05,\n",
+        "    bias = \"none\",\n",
+        "    # Removed redundant task_type argument\n",
+        "    random_state = 3047\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aXibSpX00AYm",
+        "outputId": "f43bca2c-2610-4052-c1f8-a8d3b14eb8ef"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unsloth: You added custom modules, but Unsloth hasn't optimized for this.\n",
+            "Beware - your finetuning might be noticeably slower!\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Unsloth 2025.11.3 patched 28 layers with 0 QKV layers, 0 O layers and 0 MLP layers.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#model loaded now prepare for dataset\n",
+        "import re\n",
+        "from datasets import load_dataset , Dataset\n",
+        "#load and prep dataset\n",
+        "SYSTEM_PROMPT = \"\"\"\n",
+        "Respond in the following format:\n",
+        "<reasoning>\n",
+        "...\n",
+        "</reasoning>\n",
+        "<answer>\n",
+        "...\n",
+        "</answer>\n",
+        "\"\"\"\n",
+        "\n",
+        "#helper function for parsing Answer\n",
+        "def extract_hash_answer(text:str) ->str|None:\n",
+        "  if \"###\" not in text:\n",
+        "    return None\n",
+        "  return text.split(\"###\")[1].strip()\n",
+        "\n",
+        "#uncomment middle messages for 1-shot prompting\n",
+        "def get_gsm8k_questions(split=\"train\") ->Dataset:\n",
+        "  gsm8k = load_dataset(\"openai/gsm8k\",\"main\",split = split)\n",
+        "  gsm8k = gsm8k.map(lambda x:{\n",
+        "      'prompt':[\n",
+        "          {'role':'system','content':SYSTEM_PROMPT},\n",
+        "          {'role':'user','content':x['question']},\n",
+        "          ],\n",
+        "          'answer':extract_hash_answer(x['answer'])\n",
+        "  })\n",
+        "  return gsm8k\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JkgavI3E1SY7"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#define reward function\n",
+        "def extract_xml_answer(text:str) ->str:\n",
+        "  answer = text.split(\"<answer>\")[-1]\n",
+        "  answer = answer.split(\"</answer>\")[0]\n",
+        "  return answer.strip()\n",
+        "\n",
+        "def correctness_reward_func(prompts,completions,answer,**kwargs) ->list[float]:\n",
+        "  responses = [completion[0]['content'] for completion in completions]\n",
+        "  q = prompts[0][-1]['content']\n",
+        "  extracted_responses = [extract_xml_answer(r) for r in responses]\n",
+        "  print('-'*20,f\"Question:\\n{q}\",f\"\\nAnswer:\\n{answer[0]}\",f\"\\nResponse:\\n{responses[0]}\", f\"\\nExtracted:\\n{extracted_responses[0]}\")\n",
+        "  return [2.0 if r==a else 0.0 for r,a in zip(extracted_responses,answer)]"
+      ],
+      "metadata": {
+        "id": "4biGU-0B5U8t"
+      },
+      "execution_count": 15,
       "outputs": []
     }
   ]
