--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPsFASmQkfXOzwu/hd2R5so",
+      "authorship_tag": "ABX9TyM9chdIV3d7J2rHRtQ+maa2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1721,7 +1721,7 @@
       "metadata": {
         "id": "PbfL59rmnZbc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1734,7 +1734,7 @@
       "metadata": {
         "id": "yufPXVwbxqzE"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1788,7 +1788,7 @@
         "id": "aXibSpX00AYm",
         "outputId": "f43bca2c-2610-4052-c1f8-a8d3b14eb8ef"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1847,7 +1847,7 @@
       "metadata": {
         "id": "JkgavI3E1SY7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1869,7 +1869,64 @@
       "metadata": {
         "id": "4biGU-0B5U8t"
       },
-      "execution_count": 15,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def int_reward_func(completions,**kwargs) ->list[float]:\n",
+        "  responses = [completion[0]['content'] for completion in completions]\n",
+        "  extracted_responses = [extract_xml_answer(r) for r in responses]\n",
+        "  return[0.5 if r.isdigit() else 0.0 for r in extracted_responses]"
+      ],
+      "metadata": {
+        "id": "ZlQjWNSa7Z9p"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def strict_format_reward_func(completions, **kwargs) -> list[float]:\n",
+        "  \"\"\" Reward function that checks if the completion has a specific format.\"\"\"\n",
+        "  pattern = r\"^<reasoning>\\n.*?\\n</reasoning>\\n<answer>\\n.*?\\n</answer>$\"\n",
+        "  responses = [completion[0]['content'] for completion in completions]\n",
+        "  matches = [re.match(pattern,r) for r in responses]\n",
+        "  return[0.5 if match else 0.0 for match in matches]\n",
+        "\n",
+        "def soft_format_reward_func(completions, **kwargs) -> list[float]:\n",
+        "  \"\"\" Reward function that checks if the completion has a specific format.\"\"\"\n",
+        "  pattern = r\"^<reasoning>.*?</reasoning>\\s*<answer>.*?</answer>$\"\n",
+        "  responses = [completion[0]['content'] for completion in completions]\n",
+        "  matches = [re.match(pattern,r) for r in responses]\n",
+        "  return[0.5 if match else 0.0 for match in matches]\n",
+        "\n",
+        "#XML counting helper function\n",
+        "def count_xml(text) -> float:\n",
+        "  count = 0.0\n",
+        "  if text.count(\"<reasoning>\\n\") ==1:\n",
+        "      count+=0.125\n",
+        "  if text.count(\"\\n<reasoning>\\n\") ==1:\n",
+        "      count+=0.125\n",
+        "  if text.count(\"\\n<answer>\\n\") ==1:\n",
+        "      count+=0.125\n",
+        "      count -= len(text.split)(\"\\n</answer>\\n\")[-1]*0.001\n",
+        "  if text.count(\"\\n</answer>\") ==1:\n",
+        "        count+=0.125\n",
+        "        count -= (len(text.split)(\"\\n</answer>\")[-1] -1)*0.001\n",
+        "  return count\n",
+        "\n",
+        "def xmlcount_reward_func(completions, **kwargs) -> list[float]:\n",
+        "  responses = [completion[0]['content'] for completion in completions]\n",
+        "  return[count_xml(r) for r in responses]\n",
+        ""
+      ],
+      "metadata": {
+        "id": "G06RTjTR705r"
+      },
+      "execution_count": 22,
       "outputs": []
     }
   ]
