--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOrAFDIm1ElOq9R/HdQYvUE",
+      "authorship_tag": "ABX9TyNZMEiShcHE4AehbzdU1JPX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1674,7 +1674,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#traning by open RLHF\n",
+        "#training by open RLHF\n",
         "import os , json ,subprocess , re\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -2028,6 +2028,106 @@
       ],
       "metadata": {
         "id": "kqOUQY6hI35s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fine tuning Qwen Model on thinking\n",
+        "#install dependencies\n",
+        "!pip install --no-deps bitsandbytes accelerate xformers peft trl==0.15.2 triton cut_cross_entropy unsloth_zoo\n",
+        "!pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
+        "!pip install --no-deps unsloth\n",
+        "!pip install vllm"
+      ],
+      "metadata": {
+        "id": "kC3a2c6BSVo3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth import FastLanguageModel\n",
+        "import torch\n",
+        "#load the base model and tokenizer\n",
+        "model , tokenizer = FastLanguageModel.from_pretrained(\n",
+        "    model_name = \"unsloth/Qwen3-14B\",\n",
+        "    max_seq_length = 2048,\n",
+        "    load_in_4bit = True,\n",
+        "    fast_inference = True,\n",
+        "    max_lora_rank = 64,\n",
+        "    gpu_memory_utilization = 0.9,\n",
+        ")\n",
+        "#Add LoRA Adapters to the model\n",
+        "model = FastLanguageModel.get_peft_model(\n",
+        "    model,\n",
+        "    r=32, #LoRA rank (higher rank = more parameters , potentially better fit but more memory)\n",
+        "    target_modules = [\n",
+        "        \"q_proj\",\n",
+        "        \"k_proj\",\n",
+        "        \"v_proj\",\n",
+        "        \"o_proj\",\n",
+        "        \"gate_proj\",\n",
+        "        \"u_proj\",\n",
+        "        \"down_proj\"\n",
+        "    ],\n",
+        "    lora_alpha = 32, #scaling factor for updating LoRA Adapter Weight Parameters (often set to r to 2r)\n",
+        "    lora_dropout = 0, #drop probability for LoRA layers\n",
+        "    bias = \"none\", #Fine-tuning bias terms ('none' is often optimal)\n",
+        "    use_gradient_checkpointing = \"unsloth\", #use this for memory savings\n",
+        "    random_state = 3047,\n",
+        "    use_rslora = False, # Rank Stable LoRA(optional)\n",
+        "    loftq_config = None, # LoftQ intialization (optional)\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "bbGR-khgT7qk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datasets import load_dataset\n",
+        "reasoning_dataset = load_dataset(\"unsloth/OpenMathReasoning-mini\",split = \"cot\")\n",
+        "non_reasoning_dataset = load_dataset(\"mlabonne/FineTome-100k\",split = \"train\")\n",
+        "print(\"Reasoning Dataset\",reasoning_dataset[0])\n",
+        "print(\"\\n Non-Reasoning Dataset Example row (raw)\",non_reasoning_dataset[0])\n"
+      ],
+      "metadata": {
+        "id": "0CDsHXtfW_lU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_reasoning_conversation(examples):\n",
+        "  problems = examples[\"problem\"]\n",
+        "  # the 'generated solution ' contains the COT-Reasoning\n",
+        "  solutions = examples[\"generated_solutions\"]\n",
+        "  conversations = []\n",
+        "  for problem , solution in zip(problems , solutions):\n",
+        "    conversations.append([\n",
+        "        {\"role\":\"user\", \"content\":problem},\n",
+        "        {\"role\":\"assistant\",\"content\":solution},\n",
+        "    ])\n",
+        "  return {\"conversations\":conversations}\n",
+        "#apply the chat template (without tokenizing yet)\n",
+        "#the generated_solution in the dataset ALREADY contains the <think> tags properly formatted\n",
+        "reasoning_formatted_texts = tokenizer.apply_chat_template(\n",
+        "    reasoning_dataset.map(generate_reasoning_conversation,batched = True)[\"conversations\"],\n",
+        "    tokenize = False,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "0LyrjLyWZceq"
       },
       "execution_count": null,
       "outputs": []
