--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNZMEiShcHE4AehbzdU1JPX",
+      "authorship_tag": "ABX9TyPj77DHXzKXQiHWHznB3YdD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2128,6 +2128,63 @@
       ],
       "metadata": {
         "id": "0LyrjLyWZceq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth.chat_templates import standardize_sharegpt # share gpt format data for conversations\n",
+        "#non reasoning based data that has no <THINK> </THINK> tag\n",
+        "#standardize\n",
+        "standardized_non_reasoning_dataset = standardize_sharegpt(non_reasoning_dataset)\n",
+        "#apply the chat template\n",
+        "non_reasoning_formatted_texts = tokenizer.apply_chat_template(\n",
+        "    standardized_non_reasoning_dataset[\"conversations\"],\n",
+        "    tokenize = False,\n",
+        ")\n",
+        "print(\"\\n First formatted Non-Reasoning Row\")\n",
+        "print(non_reasoning_formatted_texts[0])"
+      ],
+      "metadata": {
+        "id": "zOwQh_nndCbe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#combine the datsets - thinking and non-thinking\n",
+        "import pandas as pd\n",
+        "from datasets import Dataset\n",
+        "#define chat data percentage\n",
+        "chat_percentage = 0.75\n",
+        "reasoning_series = pd.Series(reasoning_formatted_texts)\n",
+        "non_reasoning_series = pd.Series(non_reasoning_formatted_texts)\n",
+        "\n",
+        "#number of non reasoning samples we need\n",
+        "num_non_reasoning_samples = int(len(reasoning_series) * (chat_percentage/(1.0 - chat_percentage)))\n",
+        "num_non_reasoning_samples = min(num_non_reasoning_samples,len(non_reasoning_series))\n",
+        "\n",
+        "print(f\"Using {len(reasoning_series)} reasoning_samples\")\n",
+        "print(f\"Using {num_non_reasoning_samples} non-reasoning samples\")\n",
+        "non_reasoning_subset = non_reasoning_series.sample(n = num_non_reasoning_samples,random_state = 3047)\n",
+        "\n",
+        "#combine the dataset\n",
+        "combined_series = pd.concat([reasoning_series,non_reasoning_subset])\n",
+        "combined_series.name = \"text\" #SFT Trainer expects this column name ?\n",
+        "\n",
+        "#convert back to Hugging Face Dataset and Shuffle\n",
+        "combined_dataset = Dataset.from_pandas(combined_series.to_frame()).shuffle(seed = 3047)\n",
+        "\n",
+        "print(f\"\\n Final Combined Dataset size:{len(combined_dataset)}\")\n",
+        "print(\"Example entry from combined dataset\")\n",
+        "print(combined_dataset[0]['text'])"
+      ],
+      "metadata": {
+        "id": "LRoEUKc8eWNn"
       },
       "execution_count": null,
       "outputs": []
