--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPj77DHXzKXQiHWHznB3YdD",
+      "authorship_tag": "ABX9TyPsae2YhJDcZk7DrKJ8ENEV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -2185,6 +2183,78 @@
       ],
       "metadata": {
         "id": "LRoEUKc8eWNn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#code for training the model\n",
+        "from trl import SFTTrainer , SFTConfig\n",
+        "trainer = SFTTrainer(\n",
+        "    model = model,\n",
+        "    tokenizer = tokenizer,\n",
+        "    train_dataset = combined_dataset,\n",
+        "    dataset_text_field = \"text\",\n",
+        "    max_seq_length = 2048, #should match model loading\n",
+        "    args = SFTConfig(\n",
+        "        per_device_train_batch_size = 2,\n",
+        "        gradient_accumulation_steps = 4, #EBS = 2*4 = 8\n",
+        "        learning_rate = 2e-5,\n",
+        "        bf16 = True,\n",
+        "        logging_steps = 1,\n",
+        "        learning_rate = 2e-5,\n",
+        "        bf16 = True,\n",
+        "        optim = \"adamw_8bit\",\n",
+        "        weight_decay = 0.01,\n",
+        "        lr_scheduler_type = \"linear\",\n",
+        "        seed = 3407,\n",
+        "        output_dir = \"outputs\", #directory to save checkpoints\n",
+        "        report_to = \"none\"\n",
+        "    ),\n",
+        ")\n",
+        "#Start Training\n",
+        "print(\"Starting Training...\")\n",
+        "trainer_stats = trainer.train()\n",
+        "print(\"Training Complete...\")"
+      ],
+      "metadata": {
+        "id": "6YGC0u7NhFpf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#INFERENCE THINKING and NON-THINKING\n",
+        "from transformers import TextStreamer\n",
+        "messages =[\n",
+        "    {\"role\":\"user\",\"content\":\"Solve(x+2)^2 =0.\"}\n",
+        "]\n",
+        "text_input_no_think = tokenizer.apply_chat_template(messages,tokenize = False,add_generation_prompt = True,enable_thinking = False)\n",
+        "print(\"---Non Thinking Inference---\")\n",
+        "print(\"Formatted Input:\\n\",text_input_no_think)\n",
+        "#Generate response using paramaters suitable for non-thinking/chat\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6rRevXEgirDT"
       },
       "execution_count": null,
       "outputs": []
