--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsae2YhJDcZk7DrKJ8ENEV",
+      "authorship_tag": "ABX9TyNjx81LQrtssnFjF5OTVm92",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2237,21 +2237,16 @@
         "print(\"---Non Thinking Inference---\")\n",
         "print(\"Formatted Input:\\n\",text_input_no_think)\n",
         "#Generate response using paramaters suitable for non-thinking/chat\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "inputs = tokenizer(text_input_no_think,return_tensors = \"pt\").to(\"cuda\")\n",
+        "streamer_no_think = TextStreamer(tokenizer, skip_prompt = True)\n",
+        "_= model.generate(**inputs,\n",
+        "                  streamer = streamer_no_think,\n",
+        "                  max_new_tokens = 256,\n",
+        "                  temperature = 0.7,\n",
+        "                  top_p = 0.8,\n",
+        "                  top_k = 20,\n",
+        "                  eos_token_id = tokenizer.eos_token_id)\n",
+        "print(\"\\n-----------------------------\")"
       ],
       "metadata": {
         "id": "6rRevXEgirDT"
