--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjx81LQrtssnFjF5OTVm92",
+      "authorship_tag": "ABX9TyPhpiGL+CC/gwwZWUmiOHKs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2228,7 +2228,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#INFERENCE THINKING and NON-THINKING\n",
+        "#INFERENCE\n",
+        "#NON-THINKING\n",
         "from transformers import TextStreamer\n",
         "messages =[\n",
         "    {\"role\":\"user\",\"content\":\"Solve(x+2)^2 =0.\"}\n",
@@ -2250,6 +2251,53 @@
       ],
       "metadata": {
         "id": "6rRevXEgirDT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#INFERENCE\n",
+        "#THINKING\n",
+        "text_input_think = tokenizer.apply_chat_template(messages,tokenize = False,add_generation_prompt = True,enable_thinking = True)\n",
+        "print(\"--- Thinking Inference---\")\n",
+        "print(\"Formatted Input:\\n\",text_input_think)\n",
+        "#Generate response using paramaters suitable for non-thinking/chat\n",
+        "inputs_think = tokenizer(text_input_think,return_tensors = \"pt\").to(\"cuda\")\n",
+        "streamer_think = TextStreamer(tokenizer, skip_prompt = True)\n",
+        "_= model.generate(**inputs_think,\n",
+        "                  streamer = streamer_no_think,\n",
+        "                  max_new_tokens = 256,\n",
+        "                  temperature = 0.7,\n",
+        "                  top_p = 0.8,\n",
+        "                  top_k = 20,\n",
+        "                  eos_token_id = tokenizer.eos_token_id)\n",
+        "print(\"\\n-----------------------------\")"
+      ],
+      "metadata": {
+        "id": "C7DkwphIlWuU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#save the model\n",
+        "#save LoRA adapters locally\n",
+        "model.save_pretrained(\"qwen3_14b_reasoning_chat_lora\")\n",
+        "tokenizer.save_pretrained(\"qwen3_14b_reasoning_chat_lora\") # save tokenizer also this is KEY\n",
+        "#Optional push to hub\n",
+        "#model.push_to_hub(\"user_name/qwen3_14b_reasoning_chat_lora, token = HF_TOKEN\")\n",
+        "#tokenizer.push_to_hub(\"user_name/qwen3_14b_reasoning_chat_lora, token = HF_TOKEN\")\n",
+        "\n",
+        "#To load these adapters later:\n",
+        "#model , tokenizer = FastLanguageModel.from_pretrained(model_name = \"user_name/qwen3_14b_reasoning_chat_lora\" , load_in_4bit = True)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "701Mlv5il9N4"
       },
       "execution_count": null,
       "outputs": []
